Fix spacing between the title and the grid

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h1 {
   color: #fde514;
   font-size: 56px;
   text-align: center;
+  margin-bottom: 32px;
 }
 
 .container {
